# models/userModel.js
@@ -6,7 +6,7 @@ const newAccount = new Schema({
     userId: { type: String },
     userAddress: { type: String },
     date: { type: String },
-    userDataObjects: { type: Object }
+    userDataObjects: [{ type: Object }]
 })
 
 module.exports = mongoose.model('newAccount', newAccount); 
